2008-02-18  Loic Dachary  <loic@pokerdev.pokersource.info>

	* Release 1.3.0

	* pokernetwork/pokerclient.py: ERROR packets are no longer
	consumed by the pokerclient layer.

2008-02-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test18_badAttempts): Wrote function.
	(PokerAvatarTestCase.requestsWithWrongSerial): Wrote function.

2008-02-18  Loic Dachary  <loic@pokerdev.pokersource.info>

	* pokernetwork/pokerexplain.py: explain function returns True or False. Resulting packets are to be found, always, in explain.forward_packets. 

	* pokernetwork/pokeravatar.py: When used server side, the error
	packet is returned to the client instead of being discarded.

	* tests/test-pokerexplain.py.in: adapt to new return value

2008-02-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test99_testTinyFunctions): Wrote function.
	(PokerAvatarTestCase.tinyFunctions): Wrote function.
	(PokerAvatarTestCase.test16_explainTooLate): Wrote function.
	(PokerAvatarTestCase.pingThenUnprivRegisterTourney): Wrote function.
	(PokerAvatarTestCase.test17_pingAndUnpriv): Wrote function.

2008-02-17  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.readyToPlay):
	Wrote function.
	(PokerAvatarTestCase.dealTable): Wrote function.
	(PokerAvatarTestCase.test15_handPlay): Wrote function.
	(PokerAvatarTestCase.joinTable): Added gameId as a parameter.
	(PokerAvatarTestCase.sitTable): Added gameId as a parameter.
	(PokerAvatarTestCase.autoBlindAnte): Wrote function.
	(PokerAvatarTestCase.sitTable): Renamed function to seatTable.
	(PokerAvatarTestCase.sitTable): Wrote a new function by this name.
	(PokerAvatarTestCase.beginHandSetup): Wrote function.
	(PokerAvatarTestCase.doBlindPost): Wrote function.
	(PokerAvatarTestCase.startHandAndReceiveCards): Wrote function.

2008-02-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in